# ideal

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.obsoletecode/: datagen.ipynb  icm_annealing_data.py  idealplotter.py  plot_expIV.py
idealpestimation/: pytest.ini
idealpestimation/src/: aggregate_expI.py  aggregate_expII.py  aggregate_expIII.py  aggregate_expIII_peralgo.py  ca.py  ca_expIV.py  ca_slurm.py  datagen.ipynb  datagen.py  datagen_expIII.py  efficiency_monitor.py  get_epo_adjacency_matrices.py  icm_annealing_data.py  icm_annealing_data_slurm.py  icm_annealing_posteriorpower.py  icm_annealing_posteriorpower_slurm.py  job_runner_2.slurm  mle.py  mle_slurm.py  parallel_manager.py  pij_errplots_expI.py  plot_expIV.py  plot_expIV_sns.py  utils.py
idealpestimation/tests/: test_1.py
src/: datagen.ipynb
src/testinstall/: bernoulli  test.py
