[metadata]
name = idealpestimation
description = A package to estimate Ideal Points models with different estimation methods.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ioannis Chalkiadakis
version=0.1
license = MIT
license_files = LICENSE
url=https://github.com/ichalkiad/ideal
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/ichalkiad/ideal/issues

[options]
packages =
    idealpestimation
install_requires =
    numpy>=1.23.5
    scipy>=1.9.3
    pandas>=1.5.2    
    plotly>=5.11.0
    scikit-learn>=1.2.1
    protobuf>=3.20.3
    tabulate>=0.9.0
    streamlit >= 1.17.0

python_requires = >=3.8

zip_safe = no

[options.packages.find]
where = idealpestimation

[options.extras_require]
testing =
    pytest>=7.3.0
    pytest-cov>=2.0
    tox>=3.24